[gd_scene load_steps=5 format=2]

[ext_resource path="res://Image/Menu/GodsScreen.png" type="Texture" id=1]
[ext_resource path="res://Script/Menu/GodsScreen.gd" type="Script" id=2]
[ext_resource path="res://Image/Gods/DéesseTéléporationIcone.png" type="Texture" id=3]
[ext_resource path="res://Scene/Menu/PowerGodsScreen.tscn" type="PackedScene" id=4]

[node name="GodsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="GodsScreenDisplay" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="DisplayGodsImage" type="Control" parent="GodsScreenDisplay"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="GodImageSelect" type="Sprite" parent="GodsScreenDisplay/DisplayGodsImage"]
centered = false

[node name="SelectionGods" type="Control" parent="GodsScreenDisplay"]
margin_left = 47.0
margin_top = 174.0
margin_right = 1285.0
margin_bottom = 930.0

[node name="GodImage" type="Sprite" parent="GodsScreenDisplay/SelectionGods"]
position = Vector2( -47, -174 )
texture = ExtResource( 3 )
centered = false

[node name="SelectionGodButton" type="Button" parent="GodsScreenDisplay/SelectionGods"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 42.0
margin_top = 19.0
margin_right = 242.0
margin_bottom = 371.0

[node name="PowerGodsScreen" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="mouse_entered" from="GodsScreenDisplay/SelectionGods/SelectionGodButton" to="." method="_on_SelectionGodButton_mouse_entered"]
[connection signal="mouse_exited" from="GodsScreenDisplay/SelectionGods/SelectionGodButton" to="." method="_on_SelectionGodButton_mouse_exited"]
[connection signal="pressed" from="GodsScreenDisplay/SelectionGods/SelectionGodButton" to="." method="_on_SelectionGodButton_pressed"]
